[package]
name = "blogger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[dependencies]
actix-web = "4.2.1"
tokio = { version = "1.22.0", features = ["rt-multi-thread", "macros"] }

[[bin]]
path = "src/main.rs"
name = "blogger"

[dev-dependencies]
reqwest = "0.11.13"
